# imgstitch

./: .gitignore  README.md  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml  tests.yml
src/imgstitch/: lib.py  main.py
tests/: test_imgstitch.py  test_other.py  test_stitch.py
tests/images/: CREDITS.md
