[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "imgstitch"
dynamic = ["version"]
description = "Automatic image alignment and stitching tool"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Alex Hudspith", email = "alexhudspith@users.noreply.github.com" }
]

dependencies = [
    "pillow >= 9.3.0",
    "numpy >= 1.23.5",
    "scipy >= 1.9.3",
]

# See https://pypi.org/classifiers/
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: End Users/Desktop',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Multimedia :: Graphics',
    'License :: OSI Approved :: MIT License'
]


[project.optional-dependencies]
dev = [
    "pytest >= 7",
    "pytest-cov >= 3",
    "coverage[toml] >= 7",
    "flake8 >= 4",
    "flake8-docstrings >= 1",
    "tox ~= 4.0",
    "mypy[reports] >= 0.991",
    "types-Pillow"
]

# Dependencies used by tox tests, excluding tox itself
tox = [
    "pytest >= 7",
    "pytest-cov >= 3",
    "coverage[toml] >= 7",
    "mypy[reports] >= 0.991",
    "types-Pillow"
]


[project.scripts]
imgstitch = "imgstitch.main:main"


[project.urls]
"Homepage" = "https://github.com/alexhudspith/imgstitch"
"Bug Reports" = "https://github.com/alexhudspith/imgstitch/issues"
"Source" = "https://github.com/alexhudspith/imgstitch"


[tool.setuptools.dynamic]
version = {attr = "imgstitch.__version__"}


[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/
pythonpath = "src"
testpaths = ["tests"]
addopts = "--import-mode=importlib --capture=tee-sys --cov"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "WARNING"


[tool.coverage.run]
# https://coverage.readthedocs.io/en/latest/
# Append machine, PID & random number to .coverage data file name
parallel = true
# Measure branch coverage (e.g. if/else branches taken)
branch = true


[tool.mypy]
# https://mypy.readthedocs.io/en/latest/
mypy_path = "src"
packages = "imgstitch"
install_types = true
non_interactive = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# No typing information or type stubs available
module = [
    "scipy",
    "matplotlib.*"
]
ignore_missing_imports = true
